# tidye

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_config.json
tidye/: __main__.py  model.py  simulation.py
