[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tidye"
version = "0.1.1"
description = "Tidal simulation with multiple moons (for Emily)"
authors = ["William Dye"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "2.0"
matplotlib = "3.9"

[tool.poetry.scripts]
tidye = 'tidye.__main__:main'
